--- a/DSProject.ipynb
+++ b/DSProject.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "8d2b6fd6",
+   "id": "6671f02e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c7838f41",
+   "id": "89046553",
    "metadata": {},
    "source": [
     "### Create a new Data Warehouse Database"
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "27de5078",
+   "id": "4f77ac94",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1348,7 +1348,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "5883c733",
+   "id": "7807ef89",
    "metadata": {},
    "outputs": [
     {
@@ -1887,7 +1887,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "58569f51",
+   "id": "c6178821",
    "metadata": {},
    "source": [
     "### Reading CSV File "
@@ -1896,7 +1896,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "bbee9f2c",
+   "id": "7f0934f7",
    "metadata": {},
    "outputs": [
     {
@@ -1967,7 +1967,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "3d04be7d",
+   "id": "678b3b4d",
    "metadata": {
     "scrolled": true
    },
@@ -2039,7 +2039,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8e9f50ca",
+   "id": "aaef55ec",
    "metadata": {},
    "source": [
     "### Transformations"
@@ -2048,7 +2048,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "fa4c8ad5",
+   "id": "a4b7b564",
    "metadata": {
     "scrolled": false
    },
@@ -2146,7 +2146,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "48939c23",
+   "id": "b00672d1",
    "metadata": {},
    "outputs": [
     {
@@ -2267,7 +2267,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "f5a467ea",
+   "id": "56b50332",
    "metadata": {},
    "outputs": [
     {
@@ -2486,7 +2486,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ab1ac8f",
+   "id": "2240c355",
    "metadata": {},
    "source": [
     "### Write back to SQL "
@@ -2495,7 +2495,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "bdf7f812",
+   "id": "283e63e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2510,7 +2510,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "e6748f86",
+   "id": "eac8270d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2524,7 +2524,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0554a183",
+   "id": "d0730065",
    "metadata": {},
    "source": [
     "### Validate "
@@ -2533,7 +2533,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "46667f9b",
+   "id": "d6e9af7f",
    "metadata": {},
    "outputs": [
     {
@@ -2667,7 +2667,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "98eff2ff",
+   "id": "900bcab2",
    "metadata": {},
    "outputs": [
     {
@@ -2792,7 +2792,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b433e1ff",
+   "id": "2ad55dcb",
    "metadata": {},
    "source": [
     "#### Extract Data from the Source MongoDB Collections Into DataFrames"
@@ -2801,7 +2801,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "7976e134",
+   "id": "8dfbe2b9",
    "metadata": {},
    "outputs": [
     {
@@ -2887,7 +2887,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "36e3f24b",
+   "id": "80d7afac",
    "metadata": {
     "scrolled": true
    },
@@ -2974,7 +2974,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "8843e4f0",
+   "id": "f962b812",
    "metadata": {},
    "outputs": [
     {
@@ -3059,7 +3059,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "792461bc",
+   "id": "4ebc0870",
    "metadata": {},
    "outputs": [
     {
@@ -3143,7 +3143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1c250770",
+   "id": "3d120f1b",
    "metadata": {},
    "source": [
     "### Business Keys to lookup corresponding Surrogate Primary Keys"
@@ -3152,7 +3152,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "a0656ebc",
+   "id": "19834db2",
    "metadata": {},
    "outputs": [
     {
@@ -3215,7 +3215,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "ba77542f",
+   "id": "edf9aeb2",
    "metadata": {},
    "outputs": [
     {
@@ -3281,7 +3281,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "0552157f",
+   "id": "0f7c2188",
    "metadata": {},
    "outputs": [
     {
@@ -3344,7 +3344,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "ef5b40f1",
+   "id": "829994ed",
    "metadata": {},
    "outputs": [
     {
@@ -3406,7 +3406,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "292a1e46",
+   "id": "cc2c1994",
    "metadata": {},
    "source": [
     "### Merging"
@@ -3415,7 +3415,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "0d659bde",
+   "id": "67c61869",
    "metadata": {},
    "outputs": [
     {
@@ -3539,7 +3539,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "0d5f2e42",
+   "id": "0e73def4",
    "metadata": {},
    "outputs": [
     {
@@ -3669,7 +3669,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9def24dc",
+   "id": "a194acac",
    "metadata": {},
    "source": [
     "### Load DB back to Warehouse "
@@ -3678,7 +3678,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "9578ca03",
+   "id": "91737773",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3692,7 +3692,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8c295942",
+   "id": "b5e335a6",
    "metadata": {},
    "source": [
     "### Validate Fact Table Created"
@@ -3701,7 +3701,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "569326a4",
+   "id": "ff100078",
    "metadata": {},
    "outputs": [
     {
@@ -3830,7 +3830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fc1b261d",
+   "id": "7d6e8f60",
    "metadata": {},
    "source": [
     "### Demonstrate New Data Warehouse Exists"
@@ -3838,8 +3838,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
-   "id": "d9941614",
+   "execution_count": 82,
+   "id": "302e682b",
    "metadata": {},
    "outputs": [
     {
@@ -3863,101 +3863,150 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>film_id</th>\n",
+       "      <th>film_title</th>\n",
        "      <th>customer_id</th>\n",
-       "      <th>first_name</th>\n",
-       "      <th>total_rentals</th>\n",
+       "      <th>customer_name</th>\n",
+       "      <th>total_rentals_for_film</th>\n",
+       "      <th>total_rentals_for_customer</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
+       "      <td>98</td>\n",
+       "      <td>BRIGHT ENCOUNTERS</td>\n",
        "      <td>551</td>\n",
-       "      <td>CLAYTON</td>\n",
-       "      <td>4</td>\n",
+       "      <td>CLAYTON BARBEE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>89</td>\n",
-       "      <td>JULIA</td>\n",
-       "      <td>3</td>\n",
+       "      <td>132</td>\n",
+       "      <td>CHAINSAW UPTOWN</td>\n",
+       "      <td>551</td>\n",
+       "      <td>CLAYTON BARBEE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>287</td>\n",
-       "      <td>BECKY</td>\n",
-       "      <td>3</td>\n",
+       "      <td>55</td>\n",
+       "      <td>BARBARELLA STREETCAR</td>\n",
+       "      <td>551</td>\n",
+       "      <td>CLAYTON BARBEE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>371</td>\n",
-       "      <td>BILLY</td>\n",
-       "      <td>3</td>\n",
+       "      <td>65</td>\n",
+       "      <td>BEHAVIOR RUNAWAY</td>\n",
+       "      <td>551</td>\n",
+       "      <td>CLAYTON BARBEE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>19</td>\n",
-       "      <td>RUTH</td>\n",
-       "      <td>2</td>\n",
+       "      <td>131</td>\n",
+       "      <td>CENTER DINOSAUR</td>\n",
+       "      <td>89</td>\n",
+       "      <td>JULIA FLORES</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>170</th>\n",
+       "      <th>207</th>\n",
+       "      <td>109</td>\n",
+       "      <td>BUTTERFLY CHOCOLAT</td>\n",
        "      <td>577</td>\n",
-       "      <td>CLIFTON</td>\n",
+       "      <td>CLIFTON MALCOLM</td>\n",
        "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>171</th>\n",
+       "      <th>208</th>\n",
+       "      <td>100</td>\n",
+       "      <td>BROOKLYN DESERT</td>\n",
        "      <td>584</td>\n",
-       "      <td>SALVADOR</td>\n",
+       "      <td>SALVADOR TEEL</td>\n",
        "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>172</th>\n",
+       "      <th>209</th>\n",
+       "      <td>1</td>\n",
+       "      <td>ACADEMY DINOSAUR</td>\n",
        "      <td>587</td>\n",
-       "      <td>SERGIO</td>\n",
+       "      <td>SERGIO STANFIELD</td>\n",
        "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>173</th>\n",
+       "      <th>210</th>\n",
+       "      <td>60</td>\n",
+       "      <td>BEAST HUNCHBACK</td>\n",
        "      <td>595</td>\n",
-       "      <td>TERRENCE</td>\n",
+       "      <td>TERRENCE GUNDERSON</td>\n",
        "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>174</th>\n",
+       "      <th>211</th>\n",
+       "      <td>174</td>\n",
+       "      <td>CONFIDENTIAL INTERVIEW</td>\n",
        "      <td>596</td>\n",
-       "      <td>ENRIQUE</td>\n",
+       "      <td>ENRIQUE FORSYTHE</td>\n",
        "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>175 rows × 3 columns</p>\n",
+       "<p>212 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "     customer_id first_name  total_rentals\n",
-       "0            551    CLAYTON              4\n",
-       "1             89      JULIA              3\n",
-       "2            287      BECKY              3\n",
-       "3            371      BILLY              3\n",
-       "4             19       RUTH              2\n",
-       "..           ...        ...            ...\n",
-       "170          577    CLIFTON              1\n",
-       "171          584   SALVADOR              1\n",
-       "172          587     SERGIO              1\n",
-       "173          595   TERRENCE              1\n",
-       "174          596    ENRIQUE              1\n",
+       "     film_id              film_title  customer_id       customer_name  \\\n",
+       "0         98       BRIGHT ENCOUNTERS          551      CLAYTON BARBEE   \n",
+       "1        132         CHAINSAW UPTOWN          551      CLAYTON BARBEE   \n",
+       "2         55    BARBARELLA STREETCAR          551      CLAYTON BARBEE   \n",
+       "3         65        BEHAVIOR RUNAWAY          551      CLAYTON BARBEE   \n",
+       "4        131         CENTER DINOSAUR           89        JULIA FLORES   \n",
+       "..       ...                     ...          ...                 ...   \n",
+       "207      109      BUTTERFLY CHOCOLAT          577     CLIFTON MALCOLM   \n",
+       "208      100         BROOKLYN DESERT          584       SALVADOR TEEL   \n",
+       "209        1        ACADEMY DINOSAUR          587    SERGIO STANFIELD   \n",
+       "210       60         BEAST HUNCHBACK          595  TERRENCE GUNDERSON   \n",
+       "211      174  CONFIDENTIAL INTERVIEW          596    ENRIQUE FORSYTHE   \n",
        "\n",
-       "[175 rows x 3 columns]"
+       "     total_rentals_for_film  total_rentals_for_customer  \n",
+       "0                         1                         4.0  \n",
+       "1                         1                         4.0  \n",
+       "2                         1                         4.0  \n",
+       "3                         1                         4.0  \n",
+       "4                         1                         3.0  \n",
+       "..                      ...                         ...  \n",
+       "207                       1                         1.0  \n",
+       "208                       1                         1.0  \n",
+       "209                       1                         1.0  \n",
+       "210                       1                         1.0  \n",
+       "211                       1                         1.0  \n",
+       "\n",
+       "[212 rows x 6 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3965,17 +4014,25 @@
    "source": [
     "sql_purchase_orders = \"\"\" \n",
     "    SELECT \n",
-    "        c.customer_id, \n",
-    "        c.first_name,\n",
-    "        COUNT(f.rental_id) AS total_rentals\n",
+    "        fr.film_id,\n",
+    "        fi.title AS film_title,\n",
+    "        c.customer_id,\n",
+    "        CONCAT(c.first_name, ' ', c.last_name) AS customer_name,\n",
+    "        COUNT(fr.rental_id) AS total_rentals_for_film,\n",
+    "        SUM(COUNT(fr.rental_id)) OVER (PARTITION BY c.customer_id) AS total_rentals_for_customer\n",
+    "\n",
     "    FROM \n",
-    "        fact_rental f\n",
+    "        fact_rental fr\n",
     "    JOIN \n",
-    "        dim_customer c ON f.customer_id = c.customer_id\n",
-    "    GROUP BY\n",
-    "        c.customer_id, c.first_name\n",
+    "        dim_inventory i ON fr.inventory_key = i.inventory_key\n",
+    "    JOIN \n",
+    "        dim_film fi ON i.film_id = fi.film_key\n",
+    "    JOIN \n",
+    "        dim_customer c ON fr.customer_id = c.customer_id\n",
+    "    GROUP BY \n",
+    "        fr.film_id, fi.title, c.customer_id, customer_name\n",
     "    ORDER BY \n",
-    "        total_rentals DESC;\n",
+    "        total_rentals_for_customer DESC;\n",
     "\"\"\"\n",
     "\n",
     "df_fact_purchase_orders = get_sql_dataframe(sql_purchase_orders, **mysql_args)\n",
@@ -3985,7 +4042,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "106fe224",
+   "id": "e1d05810",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -3993,7 +4050,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b5f6f1e1",
+   "id": "d4350ca9",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -4001,7 +4058,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b164ab24",
+   "id": "6fbf996e",
    "metadata": {},
    "outputs": [],
    "source": []
